<resources>
    <string name="app_name">Doctor Channeling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_name">Chathura Sampath</string>
    <string name="signin">Sign In</string>
    <string name="description">Korem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="or">OR</string>
    <string name="new_account">Dont have an account? Sign In</string>
    <string name="new_account_sign_up">Dont have an account? Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="create_new_account">Create New Account</string>
    <string name="search_a_doctor">Search a doctor</string>
    <string name="active_now">Active Now</string>
    <string name="dr.upul">Dr.Upul</string>
    <string name="degree_description">Worem consectetur adipiscing elit.</string>
    <string name="write_here">Write here</string>
    <string name="welcome">Welcome</string>
    <string name="call">Call</string>
    <string name="videocall">VideoCall</string>
    <string name="plese_enter_email_and_password">Plese Enter Email and Password</string>
    <string name="see_all">See all</string>
    <string name="categories">Categories</string>
    <string name="all_doctors">All Doctors</string>
    <string name="darshan">Darshan</string>
    <string name="search_a_doctar">Search a Doctar</string>
</resources>