<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/home"
    android:id="@+id/navigation">

    <fragment android:id="@+id/home"
        android:name="com.example.doctorchanneling.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment android:id="@+id/history"
        android:name="com.example.doctorchanneling.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_home"/>

    <fragment android:id="@+id/message"
        android:name="com.example.doctorchanneling.MessageFragment"
        android:label="@string/message"
        tools:layout="@layout/fragment_message"/>

    <fragment android:id="@+id/profile"
        android:name="com.example.doctorchanneling.ProfileFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_profile"/>



</navigation>