<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".authentication.SignInActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp_16" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/averia_libre_bold"
                    android:text="@string/welcome"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/sp_26" />

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="@font/averia_libre_bold"
                android:text="@string/signin"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_26"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:fontFamily="@font/averia_sans_libre"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_62"
                android:fontFamily="@font/averia_sans_libre"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_22"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/Edittext"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/et_password"
                android:textColorHint="#546E7A"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_26"
                android:fontFamily="@font/averia_sans_libre"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_22"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_password"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/tv_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColorHint="#546E7A"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="@font/averia_sans_libre"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/tl_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_in"
                style="@style/Button"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_75"
                android:enabled="true"
                android:paddingVertical="@dimen/dp_19"
                android:text="@string/signin"
                android:textSize="@dimen/sp_22"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_29"
                android:fontFamily="@font/averia_libre_bold"
                android:text="@string/or"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/sp_22"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

            <ImageButton
                android:id="@+id/btn_sign_in_with_facebook"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_19"
                android:background="@drawable/imagebutton_bg"
                android:contentDescription="@string/app_name"
                android:src="@drawable/facebook_32"
                app:layout_constraintEnd_toStartOf="@+id/btn_sign_in_with_google"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_or"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/btn_sign_in_with_google"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_30"
                android:background="@drawable/imagebutton_bg"
                android:contentDescription="@string/app_name"
                android:src="@drawable/google"
                app:layout_constraintBottom_toBottomOf="@id/btn_sign_in_with_facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_sign_in_with_facebook"
                app:layout_constraintTop_toTopOf="@id/btn_sign_in_with_facebook" />

            <TextView
                android:id="@+id/tv_dont_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_38"
                android:layout_marginBottom="@dimen/dp_16"
                android:text="@string/new_account_sign_up"
                android:textColor="@color/light_blue"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in_with_facebook" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>