<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MessageFragment">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_start"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_end"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"
            />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/gray"
            android:background="@drawable/search_bar_bg"
            app:iconifiedByDefault="false"
            app:voiceIcon="@color/white"
            android:hint="@string/search_a_doctor"
            app:queryBackground="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_active_now"
            style="@style/TextView.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/active_now"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/search_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_profile"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_active_now" />

        <TextView
            android:id="@+id/tv_message"
            style="@style/TextView.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/message"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/rv_profile" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_message"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>